<resources>
    <string name="app_name">Tinello</string>

    <string name="tinelloLogo">This image contains the word "TINELLO" which is the name of the restaurant.</string>

    <string name="zomato">zomato</string>
    <string name="easydinner">easydinner</string>
    <string name="dineout">dineout</string>

    <string name="address">Hyatt Regency Ahmedabad, 17/A, Ashram Road, India, Lobby Level, Ahmedabad, Gujarat 380014</string>
    <string name="hours">Everyday 6:30AM - 11:00PM</string>
    <string name="phone">079 4017 1133</string>
    <string name="website">www.hyattrestaurants.com</string>
</resources>
